2008-01-28  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Posix.dll.sources: Add Mono.Unix/UnixSignal.cs.

2006-10-24  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile: Don't build make-map.exe.
	* Mono.Posix.dll.sources: Move MapAttribute into Mono.Unix.Native; remove
	  HeaderAttribute.cs; Add TypeAttributes.cs.

2006-07-02  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix_test.dll.sources: Add Mono.Unix/UnixPathTest.cs.

2006-01-02  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Remove Mono.Unix obsolete files.

2005-11-28  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix_test.dll.sources: Move StdlibTest into the Mono.Unix.Native 
	  directory.

2005-11-01  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add new files: Mono.Unix/FileHandleOperations.cs,
	  Mono.Unix/UnixPipes.cs.

2005-10-25  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add Mono.Unix.Native/FileNameMarshaler.cs.
	* Mono.Posix_test.dll.sources: Add Mono.Unix/UnixEncodingTest.cs

2005-10-21  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add new file: Mono.Unix/FileAccessPattern.cs

2005-10-19  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix.dll.sources: Add new files: Mono.Unix/FileAccessPermissions.cs,
	  Mono.Unix/FileSpecialAttributes.cs, Mono.Unix/FileTypes.cs.

2005-10-17  Jonathan Pryor  <jonpryor@vt.edu>

	* Mono.Posix_test.dll.sources: Add Mono.Unix/UnixMarshalTest.cs.

2005-09-20  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile: Build the make-map.exe in Mono.Unix.Native; add /nowarn:0618 to
	  the build, so that we don't see dozens of warnings about using [Obsolete]
	  code.
	* Mono.Unix.Native: directory added
	* Mono.Posix.dll.sources: Add Mono.Unix.Native/*.cs sources.

2005-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile: Removed System.Runtime.Remoting dependency.
	* Mono.Posix.dll.sources: Added new files:
	Mono.Remoting.Channels.Unix/UnixBinaryClientFormatterSink.cs