@@ -3,5 +3,6 @@ Mono.Unix/UnixEncodingTest.cs
 Mono.Unix/UnixGroupTest.cs
 Mono.Unix/UnixMarshalTest.cs
 Mono.Unix/UnixPathTest.cs
+Mono.Unix/UnixSignalTest.cs
 Mono.Unix/UnixUserTest.cs
 Mono.Unix.Native/StdlibTest.cs
